update google places sdk

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,9 +42,13 @@ android {
 
 dependencies {
     def supportLibVersion = safeExtGet('supportLibVersion', DEFAULT_SUPPORT_LIB_VERSION)
-
     compileOnly "com.facebook.react:react-native:+"
     implementation "com.android.support:appcompat-v7:${supportLibVersion}"
     implementation "com.google.code.findbugs:jsr305:3.0.2"
-    implementation "com.google.android.libraries.places:places:1.0.0"
+    implementation "com.google.android.libraries.places:places:1.1.0"
+}
+allprojects {
+    repositories {
+        google()
+    }
 }
